--- a/geek-m/tsconfig.json
+++ b/geek-m/tsconfig.json
@@ -18,9 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+      // 导入配置文件
+    "extends": "./path.tsconfig.json"
   },
   "include": [
     "src"
-  ]
+  ],
+  
 }
