--- a/geek-m/package.json
+++ b/geek-m/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "geek-m",
+  "name": "jikeyuan-mobile",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.31",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
     "antd-mobile": "^5.10.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "axios": "^0.26.1",
+    "dompurify": "^2.3.6",
+    "highlight.js": "^11.5.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.51.0",
-    "typescript": "^4.6.3",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
   }
 }
